force-app/main/default/objects/Payment_Plan__c/fields/Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment__c</fullName>
    <label>Down Payment</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>