force-app/main/default/objects/Payment_Plan__c/fields/Installment_Days_Range__c.field-meta.xml
<CustomField>
    <fullName>Installment_Days_Range__c</fullName>
    <label>Installment Day&apos;s Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>