force-app/main/default/objects/Payment_Plan__c/fields/Number_of_Installment__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Installment__c</fullName>
    <label>Number of Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>