force-app/main/default/objects/Payment_Plan__c/fields/Sales_Offer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Offer</label>
    <referenceTo>Sales_Offer__c</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>