force-app/main/default/objects/Payment_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discount_Percent__c</columns>
    <columns>Down_Payment__c</columns>
    <columns>Installment_Days_Range__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>